fixed view on mobile

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -26,5 +26,6 @@
     padding-left: 0;
     margin-left: 0;
     width: 100%;
+    padding-top: 72px;
   }
 }
